--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/materials/materials.css">
+      <link rel="stylesheet" href="app/tinycolorpicker/tinycolorpicker.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <link rel="stylesheet" href="components/toolbar/toolbar.css">
       <!-- endinjector -->
@@ -56,6 +57,7 @@
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/tinycolorpicker/lib/jquery.tinycolorpicker.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -75,6 +77,10 @@
           <script src="app/main/main.js"></script>
           <script src="app/materials/materials.controller.js"></script>
           <script src="app/materials/materials.js"></script>
+          <script src="app/slate/curve.service.js"></script>
+          <script src="app/slate/pencil.service.js"></script>
+          <script src="app/slate/slate.directive.js"></script>
+          <script src="app/tinycolorpicker/tinycolorpicker.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/canvas-slate/canvas-slate.controller.js"></script>
