circle and eraser ready

--- a/client/index.html
+++ b/client/index.html
@@ -77,7 +77,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/materials/materials.controller.js"></script>
           <script src="app/materials/materials.js"></script>
-          <script src="app/slate/curve.service.js"></script>
+          <script src="app/slate/circle.service.js"></script>
+          <script src="app/slate/eraser.service.js"></script>
           <script src="app/slate/pencil.service.js"></script>
           <script src="app/slate/slate.directive.js"></script>
           <script src="app/tinycolorpicker/tinycolorpicker.directive.js"></script>
