command pattern ready

--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,7 @@
           <script src="app/slate/circle.service.js"></script>
           <script src="app/slate/eraser.service.js"></script>
           <script src="app/slate/pencil.service.js"></script>
+          <script src="app/slate/slate.commander.service.js"></script>
           <script src="app/slate/slate.directive.js"></script>
           <script src="app/tinycolorpicker/tinycolorpicker.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
