--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,61 +1,60 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="login(form)" novalidate>
-
-        <div class="form-group">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="user.email" required>
-        </div>
-
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
-          </a>
-        </div>
-
-        <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
-        </div>
-      </form>
-    </div>
+<md-toolbar class="md-primary">
+  <div class="md-toolbar-tools">
+    <md-button class="md-icon-button" aria-label="Settings">
+      <md-icon md-svg-icon="/assets/svg/menu.svg"></md-icon>
+    </md-button>
+    <h1 class="md-flex">Team Draw</h1>
+    <span flex></span>
+    <md-button class="">Register</md-button>
   </div>
-  <hr>
+</md-toolbar>
+
+<div layout-align="center center" layout="row">
+  <md-content class="md-padding"   flex-gt-lg="80" flex-lg="80"  flex-md="100" flex-gt-sm="80" flex-lt-md="80" flex-sm="100">
+    <md-card>
+      <md-card-content>
+        <h2 class="md-title">Log in</h2>
+        <md-divider ></md-divider>
+        <div layout="col" layout-sm="row">
+          <div flex="60">
+            <p class="md-subhead">Account information</p>
+            <md-input-container class="md-icon-float">
+              <!-- Use floating label instead of placeholder -->
+              <label>Email</label>
+              <md-icon md-svg-src="assets/svg/email.svg" class="md-primary"></md-icon>
+              <input ng-model="user.name" type="text">
+            </md-input-container>
+            <md-input-container class="md-icon-float">
+              <label>Password</label>
+              <md-icon md-svg-src="assets/svg/key.svg" class="md-primary"></md-icon>
+              <input ng-model="user.phone" type="password">
+            </md-input-container>
+            <section layout="row"  layout-sm="column" layout-align="end center" layout-wrap>
+              <md-button class="md-primary">Forgot password?</md-button>
+              <md-button class="md-raised md-primary">Login</md-button>
+            </section>
+          </div>
+          <div flex="40" flex-sm="100" layout-align="center center">
+            <p class="">Social login</p>
+            <section layout="row" layout-align="center center" layout-wrap hide-sm hide-md>
+              <md-button class="md-fab md-primary"><md-icon md-svg-src="/assets/svg/facebook.svg"></md-icon></md-button>
+              <md-button class="md-fab md-warn"><md-icon md-svg-src="/assets/svg/googleplus.svg"></md-icon></md-button>
+              <md-button class="md-fab md-info"><md-icon md-svg-src="/assets/svg/twitter.svg"></md-icon></md-button>
+            </section>
+            <section layout="row" layout-align="center center" layout-wrap hide-gt-lg hide-lg show-sm>
+              <md-button class="md-raised md-primary" style="width:100%"><md-icon md-svg-src="/assets/svg/facebook.svg"></md-icon></md-button>
+              <md-button class="md-raised md-warn" style="width:100%"><md-icon md-svg-src="/assets/svg/googleplus.svg"></md-icon></md-button>
+              <md-button class="md-raised md-info" style="width:100%"><md-icon md-svg-src="/assets/svg/twitter.svg"></md-icon></md-button>
+            </section>
+          </div>
+        </div>
+      </md-card-content>
+      <md-divider ></md-divider>
+      <section layout="row" layout-align="center center" layout-wrap>
+        <md-button class="md-primary hide-sm">New to this site? Create an account now!</md-button>
+        <md-button class="md-primary show-sm hide-md hide-md-lg hide-lg hide-gt-lg">Create Account</md-button>
+      </section>
+    </md-card>
+
+  </md-content>
 </div>
