--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/materials/materials.controller.js"></script>
           <script src="app/materials/materials.js"></script>
+          <script src="app/passwordConfirm/passwordConfirm.directive.js"></script>
           <script src="app/slate/circle.service.js"></script>
           <script src="app/slate/eraser.service.js"></script>
           <script src="app/slate/pencil.service.js"></script>
