--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,82 +1,106 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Sign up</h1>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="register(form)" novalidate>
-
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
-                                            'has-error': form.name.$invalid && submitted }">
-          <label>Name</label>
-
-          <input type="text" name="name" class="form-control" ng-model="user.name"
-                 required/>
-          <p class="help-block" ng-show="form.name.$error.required && submitted">
-            A name is required
-          </p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
-                                            'has-error': form.email.$invalid && submitted }">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="user.email"
-                 required
-                 mongoose-error/>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-            Doesn't look like a valid email.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.required && submitted">
-            What's your email address?
-          </p>
-          <p class="help-block" ng-show="form.email.$error.mongoose">
-            {{ errors.email }}
-          </p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && submitted,
-                                            'has-error': form.password.$invalid && submitted }">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.password"
-                 ng-minlength="3"
-                 required
-                 mongoose-error/>
-          <p class="help-block"
-             ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
-            Password must be at least 3 characters.
-          </p>
-          <p class="help-block" ng-show="form.password.$error.mongoose">
-            {{ errors.password }}
-          </p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Sign up
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/login">
-            Login
-          </a>
-        </div>
-
-        <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
-        </div>
-      </form>
-    </div>
+<md-toolbar class="md-primary">
+  <div class="md-toolbar-tools">
+    <md-button class="md-icon-button" aria-label="Settings">
+      <md-icon md-svg-icon="/assets/svg/menu.svg"></md-icon>
+    </md-button>
+    <h1 class="md-flex">Team Draw</h1>
+    <span flex></span>
+    <md-button class="">Log in</md-button>
   </div>
-  <hr>
+</md-toolbar>
+<div layout-align="center start" layout="row" flex="100">
+  <md-content class="md-padding">
+    <md-card>
+      <md-card-content>
+        <h2 class="md-title">Register New Account</h2>
+        <md-divider></md-divider>
+        <div layout="col" layout-sm="row">
+          <div flex-sm="100">
+            <form name="signupForm" ng-submit="register(signupForm)" novalidate>
+              <p class="md-subhead">Account Information</p>
+              <md-input-container class="md-icon-float">
+                  <label>Full Name:</label>
+                  <md-icon md-svg-src="assets/svg/user.svg" class="md-primary"></md-icon>
+                  <input type="text" required name="name" ng-model="user.name" />
+                <div ng-messages="signupForm.name.$error" ng-show="submitted" role="alert">
+                  <div ng-message="required" ng-show="signupForm.name.$error.required">
+                    Name is required.
+                  </div>
+                </div>
+              </md-input-container>
+              <md-input-container class="md-icon-float">
+                <label>Email</label>
+                <md-icon md-svg-src="assets/svg/email.svg" class="md-primary"></md-icon>
+                <input required type="email" name="email" ng-model="user.email"
+                       maxlength="100" ng-pattern="/^.+@.+\..+$/"/>
+                <div ng-messages="signupForm.email.$error" ng-show="submitted" role="alert">
+                  <div ng-message="required" ng-show="signupForm.email.$error.required">
+                    Email is required.
+                  </div>
+                  <div ng-message="pattern" ng-show="signupForm.email.$error.email">
+                    Invalid Email
+                  </div>
+                </div>
+              </md-input-container>
+              <md-input-container class="md-icon-float">
+                <label>Password</label>
+                <md-icon md-svg-src="assets/svg/key.svg" class="md-primary"></md-icon>
+                <input ng-model="user.password" name="password" type="password" required>
+
+                <div ng-messages="signupForm.password.$error" ng-show="submitted" role="alert">
+                  <div ng-message="required" ng-show="signupForm.password.$error.required">
+                    The password is required.
+                  </div>
+                </div>
+              </md-input-container>
+              <md-input-container class="md-icon-float">
+                <label>Confirm Password</label>
+                <md-icon md-svg-src="assets/svg/key.svg" class="md-primary"></md-icon>
+                <input ng-model="user.confirmpassword" name="confirmpassword" type="password" required>
+                <div ng-messages="signupForm.confirmpassword.$error" ng-show="submitted" role="alert">
+                  <div ng-message="required" ng-show="signupForm.confirmpassword.$error.required">
+                    The password confirmation is required.
+                  </div>
+
+                </div>
+              </md-input-container>
+              <md-input-container class="md-icon-float" layout="row" layout-align="end end">
+                <div ng-message="required" ng-show="errors.other" role="alert">
+                  <div>Login information is incorrect</div>
+                </div>
+              </md-input-container>
+              <section layout="row" layout-sm="column" layout-align="end end" layout-wrap>
+                <md-button class="md-raised md-primary" style="width:100%;">Register</md-button>
+              </section>
+            </form>
+          </div>
+          <div layout="col" flex-sm="100" layout-align="center center">
+            <strong class="md-display-1" hide-sm>&nbsp; Or &nbsp;</strong>
+          </div>
+          <div flex-sm="100" layout-align="center center">
+            <p class="">Signup with:</p>
+            <section layout="row" layout-align="center center" layout-wrap>
+              <md-button class="md-raised md-primary" aria-label="Facebook social login"
+                         ng-click="loginOauth('facebook')" style="width:100%">
+                <md-icon md-svg-src="/assets/svg/facebook.svg"></md-icon>
+              </md-button>
+              <md-button class="md-raised md-warn" aria-label="Google plus social login" ng-click="loginOauth('google')"
+                         style="width:100%">
+                <md-icon md-svg-src="/assets/svg/googleplus.svg"></md-icon>
+              </md-button>
+              <md-button class="md-raised md-info" aria-label="Twitter social login" style="width:100%"
+                         ng-click="loginOauth('twitter')">
+                <md-icon md-svg-src="/assets/svg/twitter.svg"></md-icon>
+              </md-button>
+            </section>
+          </div>
+        </div>
+      </md-card-content>
+      <md-divider></md-divider>
+      <section layout="row" layout-align="center center" layout-wrap>
+        <md-button class="md-primary hide-sm">Already have an account? Go to Login</md-button>
+        <md-button class="md-primary show-sm hide-md hide-md-lg hide-lg hide-gt-lg">Back to Login</md-button>
+      </section>
+    </md-card>
+  </md-content>
 </div>
