--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -32,7 +32,7 @@
                 <label>Email</label>
                 <md-icon md-svg-src="assets/svg/email.svg" class="md-primary"></md-icon>
                 <input required type="email" name="email" ng-model="user.email"
-                       maxlength="100" ng-pattern="/^.+@.+\..+$/"/>
+                       maxlength="100" ng-pattern="/^.+@.+\..+$/" mongoose-error/>
                 <div ng-messages="signupForm.email.$error" ng-show="submitted" role="alert">
                   <div ng-message="required" ng-show="signupForm.email.$error.required">
                     Email is required.
@@ -40,33 +40,44 @@
                   <div ng-message="pattern" ng-show="signupForm.email.$error.email">
                     Invalid Email
                   </div>
+                  <div ng-message="" ng-show="signupForm.email.$error.mongoose">
+                    {{ errors.email }}
+                  </div>
                 </div>
               </md-input-container>
               <md-input-container class="md-icon-float">
                 <label>Password</label>
                 <md-icon md-svg-src="assets/svg/key.svg" class="md-primary"></md-icon>
-                <input ng-model="user.password" name="password" type="password" required>
-
+                <input ng-model="user.password" name="password" type="password"  ng-minlength="3" required mongoose-error>
                 <div ng-messages="signupForm.password.$error" ng-show="submitted" role="alert">
                   <div ng-message="required" ng-show="signupForm.password.$error.required">
                     The password is required.
+                  </div>
+                  <div ng-message="required"
+                     ng-show="(signupForm.password.$error.minlength || signupForm.password.$error.required) && submitted">
+                    Password must be at least 3 characters.
+                  </div>
+                  <div ng-message="required" ng-show="signupForm.password.$error.mongoose">
+                    {{ errors.password }}
                   </div>
                 </div>
               </md-input-container>
               <md-input-container class="md-icon-float">
                 <label>Confirm Password</label>
                 <md-icon md-svg-src="assets/svg/key.svg" class="md-primary"></md-icon>
-                <input ng-model="user.confirmpassword" name="confirmpassword" type="password" required>
+                <input ng-model="user.confirmpassword" password-confirm compare-to="user.password" name="confirmpassword" type="password" required>
                 <div ng-messages="signupForm.confirmpassword.$error" ng-show="submitted" role="alert">
                   <div ng-message="required" ng-show="signupForm.confirmpassword.$error.required">
                     The password confirmation is required.
                   </div>
-
+                  <div ng-message="compareTo" ng-show="signupForm.confirmpassword.$error.compareTo">
+                    Password confirmation is incorrect.
+                  </div>
                 </div>
               </md-input-container>
               <md-input-container class="md-icon-float" layout="row" layout-align="end end">
                 <div ng-message="required" ng-show="errors.other" role="alert">
-                  <div>Login information is incorrect</div>
+                  <div>Mongoose errors for signup</div>
                 </div>
               </md-input-container>
               <section layout="row" layout-sm="column" layout-align="end end" layout-wrap>
