--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/hub/hub.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/materials/materials.css">
       <link rel="stylesheet" href="app/tinycolorpicker/tinycolorpicker.css">
@@ -73,6 +74,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/hub/hub.controller.js"></script>
+          <script src="app/hub/hub.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/materials/materials.controller.js"></script>
