--- a/client/index.html
+++ b/client/index.html
@@ -92,12 +92,15 @@
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/canvas-slate/canvas-slate.controller.js"></script>
+          <script src="components/drawing/drawing.service.js"></script>
           <script src="components/invites/invites.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/notifications/notifications.service.js"></script>
           <script src="components/participant-list/participant-list.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
+          <script src="components/sound/sound.service.js"></script>
           <script src="components/toolbar/toolbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
