--- a/client/index.html
+++ b/client/index.html
@@ -53,14 +53,15 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
       <script src="bower_components/angular-material/angular-material.js"></script>
+      <script src="bower_components/moment/moment.js"></script>
+      <script src="bower_components/angular-moment/angular-moment.js"></script>
       <script src="bower_components/angular-resource/angular-resource.js"></script>
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/lzwCompress.js/lzwCompress.js"></script>
       <script src="bower_components/tinycolorpicker/lib/jquery.tinycolorpicker.js"></script>
-      <script src="bower_components/moment/moment.js"></script>
-      <script src="bower_components/angular-moment/angular-moment.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -93,7 +94,9 @@
           <script src="components/auth/user.service.js"></script>
           <script src="components/canvas-slate/canvas-slate.controller.js"></script>
           <script src="components/drawing/drawing.service.js"></script>
+          <script src="components/history/history.service.js"></script>
           <script src="components/invites/invites.service.js"></script>
+          <script src="components/lzwCompression/lzwCompress.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
