image saving, compression and retreival working

--- a/client/index.html
+++ b/client/index.html
@@ -93,6 +93,7 @@
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/canvas-slate/canvas-slate.controller.js"></script>
+          <script src="components/checksum/checksum.service.js"></script>
           <script src="components/drawing/drawing.service.js"></script>
           <script src="components/history/history.service.js"></script>
           <script src="components/invites/invites.service.js"></script>
