--- a/client/index.html
+++ b/client/index.html
@@ -103,6 +103,7 @@
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/notifications/notifications.service.js"></script>
           <script src="components/participant-list/participant-list.controller.js"></script>
+          <script src="components/ringbell/ringbell.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <script src="components/sound/sound.service.js"></script>
           <script src="components/toolbar/toolbar.controller.js"></script>
