working on home page

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,11 +1,11 @@
 <md-toolbar class="md-primary">
   <div class="md-toolbar-tools">
-    <md-button class="md-icon-button" aria-label="Settings">
+    <md-button class="md-icon-button" aria-label="Settings" ng-href="/">
       <md-icon md-svg-icon="/assets/svg/menu.svg"></md-icon>
     </md-button>
     <h1 class="md-flex">Team Draw</h1>
     <span flex></span>
-    <md-button class="">Register</md-button>
+    <md-button class="" ng-click="register()">Register</md-button>
   </div>
 </md-toolbar>
 
