--- a/client/index.html
+++ b/client/index.html
@@ -106,6 +106,7 @@
           <script src="components/ringbell/ringbell.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <script src="components/sound/sound.service.js"></script>
+          <script src="components/title-bar/title-bar.controller.js"></script>
           <script src="components/toolbar/toolbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
