--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,11 +1,11 @@
 <md-toolbar class="md-primary">
   <div class="md-toolbar-tools">
-    <md-button class="md-icon-button" aria-label="Settings">
+    <md-button class="md-icon-button" ng-href="/" aria-label="Settings">
       <md-icon md-svg-icon="/assets/svg/menu.svg"></md-icon>
     </md-button>
     <h1 class="md-flex">Team Draw</h1>
     <span flex></span>
-    <md-button class="">Log in</md-button>
+    <md-button class="" ng-href="/login">Log in</md-button>
   </div>
 </md-toolbar>
 <div layout-align="center start" layout="row" flex="100">
