--- a/client/app/hub/hub.html
+++ b/client/app/hub/hub.html
@@ -58,16 +58,16 @@
       </md-button>
     </md-fab-trigger>
     <md-fab-actions>
-      <md-button aria-label="Chat window" class="md-fab md-raised md-mini">
+      <md-button aria-label="Chat window" class="md-fab md-raised md-mini" ng-click="getShared()">
         <md-icon md-svg-src="assets/svg/group.svg" style="color: dimgray;"
-                 aria-label="Chat Window"></md-icon>
+                 aria-label="Shared drawings"></md-icon>
         <md-tooltip>
           Shared
         </md-tooltip>
       </md-button>
-      <md-button aria-label="Profile Information" class="md-fab md-raised md-mini">
+      <md-button aria-label="Profile Information" class="md-fab md-raised md-mini" ng-click="getMine()">
         <md-icon md-svg-src="assets/svg/user.svg" style="color: dimgray;"
-                 aria-label="Profile"></md-icon>
+                 aria-label="My own"></md-icon>
         <md-tooltip>
           Mine
         </md-tooltip>
