--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -19,9 +19,10 @@
             <form name="signupForm" ng-submit="register(signupForm)" novalidate>
               <p class="md-subhead">Account Information</p>
               <md-input-container class="md-icon-float">
-                  <label>Full Name:</label>
-                  <md-icon md-svg-src="assets/svg/user.svg" class="md-primary"></md-icon>
-                  <input type="text" required name="name" ng-model="user.name" />
+                <label>Full Name:</label>
+                <md-icon md-svg-src="assets/svg/user.svg" class="md-primary"></md-icon>
+                <input type="text" required name="name" ng-model="user.name"/>
+
                 <div ng-messages="signupForm.name.$error" ng-show="submitted" role="alert">
                   <div ng-message="required" ng-show="signupForm.name.$error.required">
                     Name is required.
@@ -33,6 +34,7 @@
                 <md-icon md-svg-src="assets/svg/email.svg" class="md-primary"></md-icon>
                 <input required type="email" name="email" ng-model="user.email"
                        maxlength="100" ng-pattern="/^.+@.+\..+$/" mongoose-error/>
+
                 <div ng-messages="signupForm.email.$error" ng-show="submitted" role="alert">
                   <div ng-message="required" ng-show="signupForm.email.$error.required">
                     Email is required.
@@ -48,13 +50,15 @@
               <md-input-container class="md-icon-float">
                 <label>Password</label>
                 <md-icon md-svg-src="assets/svg/key.svg" class="md-primary"></md-icon>
-                <input ng-model="user.password" name="password" type="password"  ng-minlength="3" required mongoose-error>
+                <input ng-model="user.password" name="password" type="password" ng-minlength="3" required
+                       mongoose-error>
+
                 <div ng-messages="signupForm.password.$error" ng-show="submitted" role="alert">
                   <div ng-message="required" ng-show="signupForm.password.$error.required">
                     The password is required.
                   </div>
                   <div ng-message="required"
-                     ng-show="(signupForm.password.$error.minlength || signupForm.password.$error.required) && submitted">
+                       ng-show="(signupForm.password.$error.minlength || signupForm.password.$error.required) && submitted">
                     Password must be at least 3 characters.
                   </div>
                   <div ng-message="required" ng-show="signupForm.password.$error.mongoose">
@@ -65,7 +69,9 @@
               <md-input-container class="md-icon-float">
                 <label>Confirm Password</label>
                 <md-icon md-svg-src="assets/svg/key.svg" class="md-primary"></md-icon>
-                <input ng-model="user.confirmpassword" password-confirm compare-to="user.password" name="confirmpassword" type="password" required>
+                <input ng-model="user.confirmpassword" password-confirm compare-to="user.password"
+                       name="confirmpassword" type="password" required>
+
                 <div ng-messages="signupForm.confirmpassword.$error" ng-show="submitted" role="alert">
                   <div ng-message="required" ng-show="signupForm.confirmpassword.$error.required">
                     The password confirmation is required.
@@ -78,6 +84,13 @@
               <md-input-container class="md-icon-float" layout="row" layout-align="end end">
                 <div ng-message="required" ng-show="errors.other" role="alert">
                   <div>Mongoose errors for signup</div>
+                </div>
+              </md-input-container>
+              <div class="g-recaptcha" data-sitekey="6LfH-w8TAAAAAKZGj8Hd1KJHN_OHfw4TTAdrqkDO"></div>
+              <md-input-container ng-show="errors.reCaptcha" class="md-icon-float" layout="row"
+                                  layout-align="center center">
+                <div ng-message="required" role="alert">
+                  <div>Invalid captcha</div>
                 </div>
               </md-input-container>
               <section layout="row" layout-sm="column" layout-align="end end" layout-wrap>
