--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/hub/hub.controller.js"></script>
           <script src="app/hub/hub.js"></script>
+          <script src="app/imageHistory/imageHistory.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/materials/materials.controller.js"></script>
